--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,20 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "app.py",
-            "use": "@vercel/python"
-        }
+      {
+        "src": "app.py",
+        "use": "@vercel/python"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/app.py"
-        }
-    ]
-}
+      {
+        "src": "/(.*)",
+        "dest": "/app.py"
+      }
+    ],
+    "env": {
+      "API_KEY": "@API_KEY",
+      "frontend_uri": "@frontend_uri"
+    }
+  }
+  
